# dsos

./: .dockerignore  .gitignore  .rsync-excludes  CMakeLists.txt  DarkSouls2.Dockerfile  DarkSouls3.Dockerfile  README.md  README_zhCN.md  default.nix  docker-compose.yml  flake.nix  sonar-project.properties
Source/: CMakeLists.txt
Source/Injector/: CMakeLists.txt  Entry.cpp  HookManager.cpp  HookManager.h  InjectorContext.h  ShutdownSignal.cpp  ShutdownSignal.h
Source/Injector/Config/: BuildConfig.h  RuntimeConfig.cpp  RuntimeConfig.h
Source/Injector/Hooks/: Hook.cpp  Hook.h
Source/Injector/Injector/: Injector.cpp  Injector.h
Source/Injector/Tests/: InjectorInitTests.cpp
Source/Loader/: App.config  CMakeLists.txt  Directory.Build.props  Loader.csproj  Program.cs  ProgramSettings.Designer.cs  ProgramSettings.settings
Source/Loader.Avalonia/: App.axaml  App.axaml.cs  CMakeLists.txt  Directory.Build.props  GameType.cs  Loader.Avalonia.csproj  Loader.Avalonia.sln  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  ProgramSettings.cs
Source/Loader.Avalonia/Launch/: LaunchCoordinator.cs
Source/Loader.Avalonia/Tests/: LaunchCoordinatorTests.cs  Loader.Avalonia.Tests.csproj
Source/Loader.Tests/: ConfigLauncherServerQueryServiceTests.cs
Source/Loader/Api/: HubApi.cs  MasterServerApi.cs  WebUiApi.cs
Source/Loader/Config/: BuildConfig.cs  InjectionConfig.cs  ServerConfig.cs
Source/Loader/Forms/: CreateServerDialog.Designer.cs  CreateServerDialog.cs  MainForm.Designer.cs  MainForm.Extracted.cs  MainForm.cs  MainForm.resx  PasswordDialog.Designer.cs  PasswordDialog.cs  ServerListViewUpdater.cs  ServerLoginDetailsDialog.Designer.cs  SettingsForm.Designer.cs  SettingsForm.cs  SettingsForm.resx  SettingsForm.zh.resx
Source/Loader/Services/: ConfigService.cs  Launcher.cs  ServerListManager.cs  ServerQueryService.cs
Source/Loader/Tests/: ConfigLauncherServerQueryServiceTests.cs  LauncherTests.cs  (+1 more)
Source/MasterServer/: .dockerignore  Dockerfile  package-lock.json  package.json
Source/Server/: CMakeLists.txt  Entry.cpp
Source/Server.DarkSouls2/: CMakeLists.txt
Source/Server.DarkSouls3/: CMakeLists.txt
Source/Shared/: CMakeLists.txt
Source/hub/: package-lock.json  package.json
(+300 files in other folders)
